# pycfmodel

./: .catalog.yml  .flake8  .gitignore  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements-cloudformation-update.txt  requirements-dev.txt  requirements-docs.txt  requirements-scripts.txt  requirements.txt  setup.py
.github/: dependabot.yml  pull_request_template.md  release-drafter.yml
.github/workflows/: codeql.yml  copilot-setup-steps.yml  lint-and-test.yml  pypi-release.yml  release-drafter.yml  test-docs.yml  update-cloudformation-actions.yml  version-consistency-check.yml  zizmor.yml
docs/: requirements.txt
docs/reference/: cfmodel.md  properties.md  resolver.md  resources.md
pycfmodel/: __init__.py  __version__.py  action_expander.py  cloudformation_actions.py  constants.py  core.py  resolver.py  utils.py
pycfmodel/actions/: __init__.py  query.py
pycfmodel/artifacts/: cloudformation_actions.json
pycfmodel/aws_iam_managed_policies/: AWSAccountActivityAccess.json  AWSAccountUsageReportAccess.json  AWSAgentlessDiscoveryService.json  AWSAppMeshEnvoyAccess.json  AWSAppMeshFullAccess.json  AWSAppMeshPreviewEnvoyAccess.json  AWSAppMeshReadOnly.json  AWSAppSyncAdministrator.json  AWSAppSyncInvokeFullAccess.json  AWSAppSyncSchemaAuthor.json  AWSApplicationDiscoveryAgentAccess.json  AWSApplicationDiscoveryServiceFullAccess.json  AWSB9InternalServicePolicy.json  AWSBackupFullAccess.json  AWSBackupOperatorAccess.json  AWSBatchFullAccess.json  AWSCertificateManagerFullAccess.json  AWSCertificateManagerPrivateCAAuditor.json  AWSCertificateManagerPrivateCAFullAccess.json  AWSCertificateManagerPrivateCAPrivilegedUser.json  AWSCloud9Administrator.json  (+392 more)
scripts/: generate_cloudformation_actions_file.py  generate_resource_from_schema.py  update_cloudformation_actions_file.py
tests/: main.py  test_action_expander.py  test_base.py  test_cf_model.py  test_constants.py  test_dynamic_resource_generation.py  test_generic.py  test_iam_role.py  test_iam_user.py  test_intrinsic_function.py  test_intrinsic_function_resolver.py  test_intrinsic_functions.py  test_model.py  test_parameter.py  test_policy_document.py  test_real_cloudformation_templates.py  test_regexs.py  test_resolve.py  test_resolver.py  test_resource.py  test_resource_generator.py  test_s3_bucket_policy.py  test_security_group.py  test_security_group_egress.py  test_security_group_ingress.py  test_sns_topic_policy.py  test_sqs_queue_policy.py  test_types.py  test_utils.py
(+320 files in other folders)
